package(default_visibility = ["//visibility:public"])

genrule(
    name = "nats_prod",
    srcs = glob(["**/*.yaml"]),
    outs = ["nats_prod.yaml"],
    cmd = """
      T=`mktemp -d`
      cp -aL k8s/vizier_deps/base/nats $$T
      kustomize build $$T/nats -o $@
    """,
)

genrule(
    name = "etcd_prod",
    srcs = glob(["**/*.yaml"]),
    outs = ["etcd_prod.yaml"],
    cmd = """
      T=`mktemp -d`
      cp -aL k8s/vizier_deps/base/etcd $$T
      kustomize build $$T/etcd -o $@
    """,
)
