load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

package(default_visibility = ["//visibility:public"])

genrule(
    name = "nats_prod",
    srcs = glob(["**/*.yaml"]),
    outs = ["nats_prod.yaml"],
    cmd = """
      T=`mktemp -d`
      cp -aL k8s/vizier_deps/base/nats $$T
      kustomize build $$T/nats -o $@
    """,
)

genrule(
    name = "etcd_operator_prod",
    srcs = glob(["**/*.yaml"]),
    outs = ["etcd_operator_prod.yaml"],
    cmd = """
      T=`mktemp -d`
      cp -aL k8s/vizier_deps/base/etcd_operator $$T
      kustomize build $$T/etcd_operator -o $@
    """,
)

pkg_tar(
    name = "vizier_deps_crds",
    srcs = [
        "base/etcd_operator/etcd_crd.yaml",
        "base/nats/nats_crd.yaml",
    ],
    package_dir = "/crds",
)
