load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "pixielabs.ai/pixielabs/platform-dependent/smoke-test",
    visibility = ["//visibility:private"],
    deps = ["//platform-dependent/smoke-test/commands:go_default_library"],
)

go_binary(
    name = "smoke-test",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
