package(default_visibility = ["//visibility:public"])

load("//bazel:cc_resource.bzl", "pl_cc_resource")

pl_cc_resource(
    name = "CPUDistribution_bpf",
    srcs = ["CPUDistribution_bpf.c"],
    tags = ["linux_only"],
)

cc_binary(
    name = "CPUDistribution_bcc",
    srcs = ["CPUDistribution.cc"],
    tags = ["linux_only"],
    deps = [
        ":CPUDistribution_bpf",
        "@com_iovisor_bcc//:bcc",
        "@com_llvm_lib//:llvm",
    ],
)
