package(default_visibility = ["//visibility:public"])

load("//bazel:cc_resource.bzl", "pl_cc_resource")
load("//bazel:pl_build_system.bzl", "pl_cc_binary", "pl_cc_library", "pl_cc_test")

pl_cc_resource(
    name = "CPUDistribution_bpf",
    srcs = ["CPUDistribution_bpf.c"],
    tags = ["linux_only"],
)

pl_cc_binary(
    name = "CPUDistribution_bcc",
    srcs = ["CPUDistribution.cc"],
    tags = ["linux_only"],
    deps = [
        ":CPUDistribution_bpf",
        "@com_iovisor_bcc//:bcc",
        "@com_llvm_lib//:llvm",
    ],
)
