package(default_visibility = ["//visibility:private"])

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["controller.go"],
    importpath = "pixielabs.ai/pixielabs/primitive-agent/controller",
)

go_binary(
    name = "controller",
    embed = [":go_default_library"],
)
