package(default_visibility = ["//visibility:private"])

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["controller.go"],
    importpath = "pixielabs.ai/pixielabs/primitive-agent/controller",
    deps = [
        "//primitive-agent/controller/proto:controller_go_proto",
        "//primitive-agent/controller/server:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "controller",
    embed = [":go_default_library"],
)
