load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["api_service.go"],
    importpath = "pixielabs.ai/pixielabs/services/api_service",
    visibility = ["//visibility:private"],
    deps = [
        "//services/api_service/controller:go_default_library",
        "//services/common:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_binary(
    name = "api_service",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
