load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "go_default_library",
    srcs = ["api_service.go"],
    importpath = "pixielabs.ai/pixielabs/services/api_service",
    visibility = ["//visibility:private"],
    deps = [
        "//services/api_service/controller:go_default_library",
        "//services/common:go_default_library",
        "//services/common/healthz:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_binary(
    name = "api_server",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "api_server_image",
    binary = ":api_server",
    importpath = "pixielabs.ai/pixielabs",
)
