load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "go_default_library",
    srcs = ["auth_server.go"],
    importpath = "pixielabs.ai/pixielabs/services/auth",
    visibility = ["//visibility:private"],
    deps = [
        "//services/auth/controllers:go_default_library",
        "//services/common:go_default_library",
        "//services/common/healthz:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_binary(
    name = "auth_server",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "auth_server_image",
    binary = ":auth_server",
    importpath = "pixielabs.ai/pixielabs",
)
