load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "logging.go",
        "server.go",
        "service_flags.go",
    ],
    importpath = "pixielabs.ai/pixielabs/services/common",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_spf13_pflag//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
        "@com_github_x_cray_logrus_prefixed_formatter//:go_default_library",
        "@com_github_zenazn_goji//web/mutil:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
