load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "go_default_library",
    srcs = ["gateway_server.go"],
    importpath = "pixielabs.ai/pixielabs/services/gateway",
    visibility = ["//visibility:private"],
    deps = [
        "//services/common:go_default_library",
        "//services/common/handler:go_default_library",
        "//services/common/healthz:go_default_library",
        "//services/common/httpmiddleware:go_default_library",
        "//services/gateway/controllers:go_default_library",
        "//services/gateway/gwenv:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_binary(
    name = "gateway_server",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "gateway_server_image",
    binary = ":gateway_server",
    importpath = "pixielabs.ai/pixielabs",
)
