load("@io_bazel_rules_docker//container:image.bzl", "container_image")
load("@io_bazel_rules_docker//container:layer.bzl", "container_layer")

container_layer(
    name = "conf",
    directory = "/etc/nginx/conf.d",
    files = ["default.conf"],
)

container_layer(
    name = "ui_assets",
    directory = "/assets",
    tars = ["//ui:ui-bundle"],
)

container_image(
    name = "proxy",
    base = "@nginx_base//image",
    layers = [
        ":conf",
        ":ui_assets",
    ],
)
