package(default_visibility = ["//visibility:public"])

load("//bazel:pl_build_system.bzl", "pl_cc_binary")
load("@io_bazel_rules_docker//cc:image.bzl", "cc_image")

pl_cc_binary(
    name = "agent",
    srcs = glob(
        ["*.cc"],
        exclude = ["**/*_test.cc"],
    ),
    deps = [
        "//src/common",
    ],
)

cc_image(
    name = "agent_image",
    binary = ":agent",
)
