package(default_visibility = ["//visibility:public"])

load("//bazel:pl_build_system.bzl", "pl_cc_binary", "pl_cc_library")
load("@io_bazel_rules_docker//cc:image.bzl", "cc_image")

pl_cc_library(
    name = "cc_library",
    srcs = glob(
        ["*.cc"],
        exclude = [
            "**/*_test.cc",
            "**/*_benchmark.cc",
        ],
    ),
    hdrs = glob(
        ["*.h"],
    ),
    deps = [
        "//src/agent/controller:cc_library",
    ],
)

pl_cc_binary(
    name = "agent",
    deps = [
        ":cc_library",
    ],
)

cc_image(
    name = "agent_image",
    binary = ":agent",
)
