# Copyright 2018- The Pixie Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

load("@rules_python//python:defs.bzl", "py_binary")

filegroup(
    name = "py_examples",
    srcs = glob(["python_examples/*.py"]),
    visibility = ["//src:__subpackages__"],
)

py_binary(
    name = "prepend_licenses",
    srcs = ["prepend_licenses.py"],
)

sh_binary(
    name = "copy_to_public_repo",
    srcs = ["copy_to_public_repo.sh"],
    data = [
        ":prepend_licenses",
        ":py_examples",
        "//src/api/go/pxapi:pxapi_group",
        "//src/api/public/cloudapipb:pbfiles",
        "//src/api/public/uuidpb:pbfiles",
        "//src/api/public/vizierapipb:pbfiles",
        "//src/api/python:copy_python_api_sh",
        "//src/api/python/pxapi:py_library",
    ],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)
