load("//bazel:pl_build_system.bzl", "pl_cc_binary")

package(default_visibility = ["//src:__subpackages__"])

pl_cc_binary(
    name = "map_benchmark",
    testonly = 1,
    srcs = ["map_benchmark.cc"],
    deps = [
        "//src/common/benchmark:cc_library",
    ],
)

pl_cc_binary(
    name = "pb_parsing_benchmark",
    testonly = 1,
    srcs = ["pb_parsing_benchmark.cc"],
    deps = [
        "//src/benchmarks/proto:benchmark_pl_cc_proto",
        "//src/common/benchmark:cc_library",
        "//src/common/grpcutils:cc_library",
    ],
)
