# Copyright 2018- The Pixie Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

load("//bazel:pl_build_system.bzl", "pl_cc_binary")

package(default_visibility = ["//src:__subpackages__"])

pl_cc_binary(
    name = "map_benchmark",
    testonly = 1,
    srcs = ["map_benchmark.cc"],
    deps = [
        "//src/common/benchmark:cc_library",
    ],
)

pl_cc_binary(
    name = "regex_benchmark",
    testonly = 1,
    srcs = ["regex_benchmark.cc"],
    deps = [
        "//src/common/benchmark:cc_library",
    ],
)

pl_cc_binary(
    name = "pb_parsing_benchmark",
    testonly = 1,
    srcs = ["pb_parsing_benchmark.cc"],
    deps = [
        "//src/benchmarks/proto:benchmark_pl_cc_proto",
        "//src/common/benchmark:cc_library",
        "//src/common/grpcutils:cc_library",
    ],
)
